--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,9 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.SQLServerDialect
+        dialect: org.hibernate.dialect.MySQL5Dialect
 
 
-
-URL_DATABASE: jdbc:sqlserver://localhost:1433;databaseName=db
-URL_USERNAME: gustavo
-URL_PASSWORD: 123
+URL_DATABASE: jdbc:mysql://localhost:3306/DB?serverTimeZone=UTC
+URL_USERNAME: root
+URL_PASSWORD:
